# gacli

./: .gitignore  AGENTS.md  README.ja.md  README.md  pyproject.toml
gacli/: cli.py  client.py  oauth.py
skills/google-analytics/: SKILL.md
tests/: test_client.py  test_config.py
